[package]
name = "async-chat"
version = "0.1.0"
edition = "2024"
authors = ["Christian yemele <yemelechristian2@gmail.com>"]

[dependencies]
async-std = { version = "1.7", features = ["unstable"] }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
anyhow = "1.0.97"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
